WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250938
Call CFArrayGetCount instead of deprecated SecTrustGetCertificateCount
https://bugs.webkit.org/show_bug.cgi?id=250938
Summary
Call CFArrayGetCount instead of deprecated SecTrustGetCertificateCount
Seija K.
Reported
2023-01-21 09:21:00 PST
We already have the CFArrayRef, so let's call CFArrayGetCount instead of SecTrustGetCertificateCount.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-01-24 17:59:15 PST
Is SecTrustGetCertificateCount deprecated? I don't see any deprecation pragmas in the SDK.
Radar WebKit Bug Importer
Comment 2
2023-01-28 09:21:16 PST
<
rdar://problem/104782756
>
Seija K.
Comment 3
2023-01-30 09:48:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9325
Seija K.
Comment 4
2023-01-30 10:37:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9329
EWS
Comment 5
2023-02-01 13:41:14 PST
Committed
259712@main
(078af423a71e): <
https://commits.webkit.org/259712@main
> Reviewed commits have been landed. Closing PR #9329 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug