CFArrayGetCount not SecTrustGetCertificateCount https://bugs.webkit.org/show_bug.cgi?id=250938

Reviewed by NOBODY (OOPS!).

We already have the CFArrayRef, so let's call CFArrayGetCount instead of
SecTrustGetCertificateCount.

* Source\WebCore\platform\network\cf\CertificateInfoCFNet.cpp:
(bool certificatesMatch(SecTrustRef trust1, SecTrustRef trust2)):
Obtain count1 and count2 from CFArrayGetCount if supported.

* Source\WebCore\platform\network\cocoa\CertificateInfoCocoa.mm:
(void CertificateInfo::dump() const): Obtain entries from
CFArrayGetCount if supported.